- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 4.9.26-191-gb4efe74 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.91 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXX - YYYYYYY
- Added optional JPEG lossy recompression by adding jpeg-recompress (maadjordan).
- Added INI setting JPEGAllowLossy=false to enable lossy JPEG optimizations (maadjordan).
- Added ZIP SFX installer detection.
- Added InstallShield Wizard and RTPatch Updater detections to exclude processing like we did with Inno Setup (ThisWillDoIt).
- Added Nullsoft Install System detections to exclude processing in EXE chain.
- Added ECT to the MP3 toolchain to optimize embedded images (Skibicki).
- Fixed a bug calling Ghostcript, that ignored parameters after dPDFSETTINGS which should made quality and size better (Skibicki #5).
- Removed genetator metatag from tidy output (JoeW).
- Disabled Leanify, and PNGout for APNG because the broke optimized files in some cases (Folding Home).
- Disabled ImageWorsener for WEBP, because it is not lossless (Skibicki #9).
- Added EPRT extension (Solid Works) to ZIP chain (maadjordan).
- Added Leanify to the HTML/SVG toolchain when HTMLEnableTidy is enabled (JoeW).
- Updated Leanify to 0.4.3.136 daily binaries.
- Updated donation button to use Paypal.me so it can accept different currencies that euros (JoeW).
- Updated pngquant to 2.7.0a.
- Updated to ECT 0.4 x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated ImageMagick 7.0.2.0 with HDRI support.
- Updated to NSIS 3.0 RC1.
- Updated to cppcheck 1.74.
- Upgraded distributions to 7-Zip 16.02.
- Some minor optimizations and code cleanup.


8.30 - 2016/04/30
- Added UPX to the EXE/DLL tool chain (guindos98, necros).